--- a/packages/dso-toolkit/src/components/code/code.scss
+++ b/packages/dso-toolkit/src/components/code/code.scss
@@ -21,6 +21,7 @@ pre {
     padding: 0;
     font-size: inherit;
     color: inherit;
+    letter-spacing: inherit;
     white-space: pre-wrap;
     background-color: transparent;
     border-radius: 0;
