--- a/packages/dso-toolkit/src/components/textarea/textarea.scss
+++ b/packages/dso-toolkit/src/components/textarea/textarea.scss
@@ -3,6 +3,7 @@ textarea {
   font: inherit;
   font-family: inherit;
   font-size: inherit;
+  letter-spacing: inherit;
   line-height: inherit;
   margin: 0;
   overflow: auto;
